Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/Weekly_Report__c.object-meta.xml
<CustomObject>
    <label>Weekly Report</label>
    <nameField>
        <displayFormat>WR-{YYYY}{MM}-{00000}</displayFormat>
        <label>Weekly Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>