Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Comment_Edit__c.field-meta.xml
<CustomField>
    <fullName>Comment_Edit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Edit</label>
    <type>Checkbox</type>
</CustomField>