Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>User can put From Date</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>