Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Is_DataLoad_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_DataLoad_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>de-activate Trigger when load data from Data loader.</description>
    <label>Is DataLoad Source</label>
    <type>Checkbox</type>
</CustomField>