Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Report_Group__c.field-meta.xml
<CustomField>
    <fullName>Report_Group__c</fullName>
    <label>Report Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel_HCS</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DGS</fullName>
            </value>
            <value>
                <fullName>HCIT</fullName>
            </value>
            <value>
                <fullName>KAG_HCS</fullName>
            </value>
            <value>
                <fullName>LCS</fullName>
            </value>
            <value>
                <fullName>MDx</fullName>
            </value>
            <value>
                <fullName>MDx_Sales</fullName>
            </value>
            <value>
                <fullName>MDx_Function</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MidWest_HCS</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>Seoul1_HCS</fullName>
            </value>
            <value>
                <fullName>Seoul2_HCS</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>YoungNam_HCS</fullName>
            </value>
            <value>
                <fullName>ZONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>