Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Send_mail__c.field-meta.xml
<CustomField>
    <fullName>Send_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Checked, Weekly Report will be sent to you via e-mail.</inlineHelpText>
    <label>Send mail</label>
    <type>Checkbox</type>
</CustomField>