Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Team_Task_Added__c.field-meta.xml
<CustomField>
    <fullName>Team_Task_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Task Added</label>
    <type>Checkbox</type>
</CustomField>