Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>User put to date</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>