Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Weekly_overall_comment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Weekly_overall_comment_Summary__c</fullName>
    <description>This field is used for Weekly report overall comment.</description>
    <label>Weekly Overall Comment (Summary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>