Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/fields/Weekly_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report_Name__c</fullName>
    <label>Weekly Report Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>