Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/recordTypes/Custom_Week.recordType-meta.xml
<RecordType>
    <fullName>Custom_Week</fullName>
    <active>true</active>
    <label>Custom Week</label>
</RecordType>