Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/recordTypes/Standard_Week.recordType-meta.xml
<RecordType>
    <fullName>Standard_Week</fullName>
    <active>true</active>
    <label>Standard Week</label>
</RecordType>