Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/validationRules/From_To_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>From_To_Date_Validation</fullName>
    <active>true</active>
    <description>From Date must not be greater than To Date.</description>
    <errorConditionFormula>From_Date__c &gt; To_Date__c</errorConditionFormula>
    <errorMessage>To Date should be greater than From Date.</errorMessage>
</ValidationRule>