Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report__c/validationRules/Weekly_Report_Date_non_modifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>Weekly_Report_Date_non_modifiable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT($User.Bypass_Custom_Validation__c),
     NOT(ISNEW()), 
     OR(
	ISCHANGED(Report_Date__c),
	ISCHANGED(Weekly_Report_Name__c),
	ISCHANGED(From_Date__c),
	ISCHANGED(To_Date__c)
     )
)</errorConditionFormula>
    <errorMessage>Report can&apos;t be modified once created.</errorMessage>
</ValidationRule>